--- a/app/src/main/res/layout/layout_home_news.xml
+++ b/app/src/main/res/layout/layout_home_news.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.github.siyamed.shapeimageview.mask.PorterShapeImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/news_imageview_home"
     android:layout_width="151dp"
     android:layout_height="151dp"
     android:layout_gravity="start"
     android:layout_marginStart="20dp"
-    android:layout_marginLeft="20dp"
-    android:background="@drawable/rectangle_4"
-    android:elevation="10dp">
-
-</RelativeLayout>
+    app:siShape="@drawable/shape_rounded_rectangle"
+    app:siSquare="true" /><!--    android:background="@drawable/rectangle_4"-->
